# Concurrent_TCP_Server

./: Cargo.toml  SOLUTION.md
Output/all_test_functions/: all_test_functions.txt
Output/main_test_functions/: main_test_functions.txt
Output/test_abrupt_client_disconnect/: test_abrupt_client_disconnect.txt
Output/test_client_add_request/: test_client_add_request.txt
Output/test_client_connection/: test_client_connection.txt
Output/test_client_echo_message/: test_client_echo_message.txt
Output/test_high_load_with_varying_message_sizes/: test_high_load_with_varying_message_sizes.txt
Output/test_multiple_clients/: test_multiple_clients.txt
Output/test_multiple_echo_messages/: test_multiple_echo_messages.txt
Output/test_sequential_clients/: test_sequential_clients.txt
src/: server.rs
tests/: client.rs  client_test.rs
