[package]
name = "embedded-recruitment-task"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
log = "0.4.2"
prost = "0.13"
prost-types = "0.13.4"
env_logger = "0.11.6"
threadpool = "1.8.1"
num_cpus = "1.13.1"
portpicker = "0.1.1"

[build-dependencies]
prost-build = "0.13.4"

[dev-dependencies]
pretty_assertions = "1.4.1"



